<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key" translatable="false">stocks</string>


    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>


    <string name="action_change_units" translatable="false">@string/pref_display_mode_key</string>


    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_stock_added_no_connectivity">Symbol %1$s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>
    <string name="unavailable">UNAVAILABLE</string>

    <string name="pref_widget_stock_key" translatable="false">pref_widget_stock_key</string>
    <string name="appwidget_stock_error">Stock not configured</string>
    <string name="widget_config">Select Stock to show in Widget</string>
    <string name="accept_widget">Accept</string>
    <string name="stats_title">Statistics</string>
    <string name="stats_eps_title_text" >EPS (Earnings Per Share)</string>
    <string name="stats_epstarget_title_text" >EPS target (next year)</string>
    <string name="stats_ebitda_title_text">EBITDA</string>
    <string name="stats_pe_title_text">P/E (Price per Earnings)</string>
    <string name="stats_pb_title_text">P/B (Price per bookvalue)</string>
    <string name="stats_ps_title_text">P/S (price per sales)</string>
    <string name="statistics_menu_item">Statistics</string>
    <string name="stocksymbol_extra_key" translatable="false">com.udacity.stockhawk.argument.stocksymbol</string>
    <string name="error_invalid_or_unavailable_statistical_data">ERROR. INVALID OR UNAVAILABLE STATISTICAL DATA.</string>
    <string name="value_not_available">N/A</string>
    <string name="m_letter_for_million_values">M</string>
    <string name="content_desc_change_of_stock_value">Change of stock value</string>
    <string name="content_desc_current_value">Current value of stock</string>
    <string name="content_desc_stock_symbol">Stock symbol</string>
    <string name="stat_title_bvps" translatable="false">BVPS</string>
    <string name="stats_ask_price_title_text">Ask price</string>
    <string name="stats_bid_price_title_text">Bid price</string>
    <string name="stats_change_today">Change, last day</string>
    <string name="stats_change_50d_percent">Change in 50 days average</string>
    <string name="stats_change_200d_percent">Change in 200 days average</string>
    <string name="stats_currency">Currency</string>
    <string name="eps_estimate_current_year">EPS estimate current year</string>
    <string name="eps_estimate_next_quarter">EPS estimate next quarter</string>
    <string name="peg">PEG</string>
    <string name="roe">ROE</string>
    <string name="shares_float">Shares float</string>
    <string name="shares_outstanding">Shares outstanding</string>
    <string name="shares_owned">Shares owned</string>
    <string name="short_ratio">Short ratio</string>
    <string name="revenue">Revenue</string>
    <string name="market_capitalization">Market capitalization</string>
    <string name="one_year_target_price">1 y target price</string>
    <string name="action_show_big_graph">Graph</string>
    <string name="big_graph_title">Graph of stock value</string>
    <string name="content_desc_error_message">Error message</string>
    <string name="content_desc_fab_add_stock">Button to add new a new stock</string>
    <string name="content_desc_swipe_refresh">Swipe down to refresh stock list</string>
    <string name="label_stock_chart">Stock Chart</string>
    <string name="content_desc_main_menu_percentage">Show change in percentage</string>
    <string name="content_desc_main_menu_currency">Show change in currency</string>
    <string name="content_desc_stock_graph">Stock value evolution by time graph.</string>
    <string name="list_of_stocks">list of stocks</string>
    <string name="no_chart_stock_not_selected">Chart is not available as no stock is selected.</string>
    <string name="fragment_chart_data_not_found">ERROR. DATA NOT FOUND.</string>
    <string name="action_data_updated_key" translatable="false">com.udacity.stockhawk.ACTION_DATA_UPDATED</string>
    <string name="yahoo_quote_not_available_key" translatable="false">N/A</string>
    <string name="unknown_stock_removal_toast_message">Removed unknown stock %s</string>
    <string name="network_receiver_up_again">Connected, quotes will update.</string>
    <string name="network_receiver_network_went_down">Disconnected, quotes will not update.</string>
    <string name="stock_name_title">Stock name</string>
    <string name="stock_last_trade_title">Last trade date</string>

</resources>
